force-app/main/default/objects/Court__c/fields/Hearing_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Outcome__c</fullName>
    <label>Hearing Outcome</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Adoption Denied</fullName>
            </value>
            <value>
                <fullName>Adoption Granted</fullName>
            </value>
            <value>
                <fullName>Agency Lost Legal Responsibility</fullName>
            </value>
            <value>
                <fullName>Appointment of Parent Surrogate</fullName>
            </value>
            <value>
                <fullName>Arraignment Preliminary Hearing Completed</fullName>
            </value>
            <value>
                <fullName>Arraignment Preliminary Hearing Not Completed</fullName>
            </value>
            <value>
                <fullName>Case Dismissed</fullName>
            </value>
            <value>
                <fullName>Case Transferred</fullName>
            </value>
            <value>
                <fullName>Child Aged Out</fullName>
            </value>
            <value>
                <fullName>Child Continued as CINA</fullName>
            </value>
            <value>
                <fullName>Child Emancipated</fullName>
            </value>
            <value>
                <fullName>Child Found CINA</fullName>
            </value>
            <value>
                <fullName>Child Found CINA/Amended Allegation</fullName>
            </value>
            <value>
                <fullName>Co-commitment to DSS and DDA</fullName>
            </value>
            <value>
                <fullName>Co-commitment to DSS and DHMH</fullName>
            </value>
            <value>
                <fullName>Co-commitment to DSS,DDA,DHMH</fullName>
            </value>
            <value>
                <fullName>Commitment Rescinded</fullName>
            </value>
            <value>
                <fullName>Commitment to the Agency</fullName>
            </value>
            <value>
                <fullName>Continued Co-Commitment</fullName>
            </value>
            <value>
                <fullName>Continued Commitment</fullName>
            </value>
            <value>
                <fullName>Continued Custody and Guardianship</fullName>
            </value>
            <value>
                <fullName>Continued Disposition</fullName>
            </value>
            <value>
                <fullName>Continued Guardianship</fullName>
            </value>
            <value>
                <fullName>Continued OPS</fullName>
            </value>
            <value>
                <fullName>Continued Placement - Guardian</fullName>
            </value>
            <value>
                <fullName>Continued Placement - Other</fullName>
            </value>
            <value>
                <fullName>Continued Placement - Parent</fullName>
            </value>
            <value>
                <fullName>Continued Placement - Relative</fullName>
            </value>
            <value>
                <fullName>Court Ordered Removal of Child from Home</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>