force-app/main/default/objects/Court__c/fields/Hearing_State__c.field-meta.xml
<CustomField>
    <fullName>Hearing_State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>