force-app/main/default/objects/Court__c/fields/Hearing_Status__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Status__c</fullName>
    <label>Hearing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>