force-app/main/default/objects/Court__c/fields/Hearing_Time__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Time__c</fullName>
    <label>Hearing Time</label>
    <type>Time</type>
</CustomField>