force-app/main/default/objects/Court__c/fields/Hearing_Type__c.field-meta.xml
<CustomField>
    <fullName>Hearing_Type__c</fullName>
    <label>Hearing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPR-Guardianship - Contested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>