force-app/main/default/objects/Court__c/fields/INSTITUTION__c.field-meta.xml
<CustomField>
    <fullName>INSTITUTION__c</fullName>
    <label>INSTITUTION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>