force-app/main/default/objects/Court__c/fields/Is_Abuse_Neglect__c.field-meta.xml
<CustomField>
    <fullName>Is_Abuse_Neglect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Abuse Neglect</label>
    <type>Checkbox</type>
</CustomField>