force-app/main/default/objects/Court__c/fields/Is_Court_Order_Signed_By_Judge__c.field-meta.xml
<CustomField>
    <fullName>Is_Court_Order_Signed_By_Judge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Court_Order_Signed_By_Judge?</label>
    <type>Checkbox</type>
</CustomField>