force-app/main/default/objects/Court__c/fields/Is_IV_E_agency_responsible_for_placement__c.field-meta.xml
<CustomField>
    <fullName>Is_IV_E_agency_responsible_for_placement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is IV-E agency responsible for placement</label>
    <type>Checkbox</type>
</CustomField>