force-app/main/default/objects/Court__c/fields/Is_Sibling_is_in_Child_Care__c.field-meta.xml
<CustomField>
    <fullName>Is_Sibling_is_in_Child_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sibling is in Child Care</label>
    <type>Checkbox</type>
</CustomField>