force-app/main/default/objects/Court__c/fields/Is_Siblings_Why__c.field-meta.xml
<CustomField>
    <fullName>Is_Siblings_Why__c</fullName>
    <label>Why?</label>
    <length>100</length>
    <type>Text</type>
</CustomField>