force-app/main/default/objects/Court__c/fields/Judge_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Judge_s_Name__c</fullName>
    <label>Judge&apos;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>