force-app/main/default/objects/Court__c/fields/Kin_Home__c.field-meta.xml
<CustomField>
    <fullName>Kin_Home__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kin Home</label>
    <type>Checkbox</type>
</CustomField>