force-app/main/default/objects/Court__c/fields/Kin_Placement_Name__c.field-meta.xml
<CustomField>
    <fullName>Kin_Placement_Name__c</fullName>
    <label>Kin Placement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>