force-app/main/default/objects/Court__c/fields/Legal_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>