force-app/main/default/objects/Court__c/fields/Medical_Exam_Where__c.field-meta.xml
<CustomField>
    <fullName>Medical_Exam_Where__c</fullName>
    <label>Medical Exam?Where?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>