force-app/main/default/objects/Court__c/fields/Mental_health_disorder__c.field-meta.xml
<CustomField>
    <fullName>Mental_health_disorder__c</fullName>
    <inlineHelpText>Mental health disorder (behavioral  or emotional illness that result from a pyschiatric or neurclogical disorder):</inlineHelpText>
    <label>Mental health disorder</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>