force-app/main/default/objects/Court__c/fields/Name_of_Physical_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Physical_Abuse__c</fullName>
    <label>Name of Physical Abuse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>