force-app/main/default/objects/Court__c/fields/Name_of_the_Custodian_of_Records__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_Custodian_of_Records__c</fullName>
    <inlineHelpText>Name of the Custodian of Records</inlineHelpText>
    <label>Name of the Custodian of Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>