force-app/main/default/objects/Court__c/fields/Nature_of_neglect_mother_father__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_neglect_mother_father__c</fullName>
    <inlineHelpText>Nature of Neglect : (mother/father) did what?</inlineHelpText>
    <label>Nature of Neglect:(mother/father)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>