force-app/main/default/objects/Court__c/fields/Nature_of_Physical_Abuse__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Physical_Abuse__c</fullName>
    <label>Nature of Physical Abuse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>