force-app/main/default/objects/Court__c/fields/Nature_of_Sexual_Abuse_mother_father__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Sexual_Abuse_mother_father__c</fullName>
    <inlineHelpText>Nature of Sexual Abuse:(mother/father) did what?</inlineHelpText>
    <label>Nature of Sexual Abuse:(mother/father)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>