force-app/main/default/objects/Court__c/fields/Neglect_Respondent_disclosed__c.field-meta.xml
<CustomField>
    <fullName>Neglect_Respondent_disclosed__c</fullName>
    <label>Respondent disclosed to: Disclosed what?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>