force-app/main/default/objects/Court__c/fields/Other_Client_named_on_Petition__c.field-meta.xml
<CustomField>
    <fullName>Other_Client_named_on_Petition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Client&apos;s named on Petition</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 OR 4)</booleanFilter>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Case__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Service_Case__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Investigation__c</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Investigation__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Other Client&apos;s named on Petition)</relationshipLabel>
    <relationshipName>Petitions5</relationshipName>
    <type>Lookup</type>
</CustomField>