force-app/main/default/objects/Court__c/fields/Other_Clients_named_on_Petition__c.field-meta.xml
<CustomField>
    <fullName>Other_Clients_named_on_Petition__c</fullName>
    <label>Other Client&apos;s named on Petition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Akila</fullName>
            </value>
            <value>
                <fullName>Keerthana</fullName>
            </value>
            <value>
                <fullName>Saravanan</fullName>
            </value>
            <value>
                <fullName>John</fullName>
            </value>
            <value>
                <fullName>Durairaj</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>