force-app/main/default/objects/Court__c/fields/Parent1__c.field-meta.xml
<CustomField>
    <fullName>Parent1__c</fullName>
    <label>Parent1</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The parent 1 has been notified of this action by DDS</fullName>
            </value>
            <value>
                <fullName>Reason for not notifying:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>