force-app/main/default/objects/Court__c/fields/Parent1_Address__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>