force-app/main/default/objects/Court__c/fields/Parent1_Race__c.field-meta.xml
<CustomField>
    <fullName>Parent1_Race__c</fullName>
    <label>Race</label>
    <length>255</length>
    <type>Text</type>
</CustomField>