force-app/main/default/objects/Court__c/fields/Parent2__c.field-meta.xml
<CustomField>
    <fullName>Parent2__c</fullName>
    <label>Parent2</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The parent 2 has been notified of this action by DSS</fullName>
            </value>
            <value>
                <fullName>Reason for not notifying:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>