force-app/main/default/objects/Court__c/fields/Parent2_DOB__c.field-meta.xml
<CustomField>
    <fullName>Parent2_DOB__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>