force-app/main/default/objects/Court__c/fields/Parent2_SSN__c.field-meta.xml
<CustomField>
    <fullName>Parent2_SSN__c</fullName>
    <label>SSN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>