force-app/main/default/objects/Court__c/fields/Parent_1_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_1_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3.Parent 1 Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Parent 1 Name)</relationshipLabel>
    <relationshipName>Petitions3</relationshipName>
    <type>Lookup</type>
</CustomField>