force-app/main/default/objects/Court__c/fields/Parent_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_2_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>4.Parent 2 Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Parent 2 Name)</relationshipLabel>
    <relationshipName>Petitions4</relationshipName>
    <type>Lookup</type>
</CustomField>