force-app/main/default/objects/Court__c/fields/Participant_CPS_ID__c.field-meta.xml
<CustomField>
    <fullName>Participant_CPS_ID__c</fullName>
    <label>CPS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>