force-app/main/default/objects/Court__c/fields/Participant_Intake__c.field-meta.xml
<CustomField>
    <fullName>Participant_Intake__c</fullName>
    <label>Intake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>