force-app/main/default/objects/Court__c/fields/Participate_Age__c.field-meta.xml
<CustomField>
    <fullName>Participate_Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>