force-app/main/default/objects/Court__c/fields/Permanency_plan_of_reunification_may_be__c.field-meta.xml
<CustomField>
    <fullName>Permanency_plan_of_reunification_may_be__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Permanency plan of reunification may be changed to another permanency plan</inlineHelpText>
    <label>Permanency plan of reunification may be</label>
    <type>Checkbox</type>
</CustomField>