force-app/main/default/objects/Court__c/fields/Person_to_whom_Records_Pertain__c.field-meta.xml
<CustomField>
    <fullName>Person_to_whom_Records_Pertain__c</fullName>
    <inlineHelpText>Person to whom Records Pertain</inlineHelpText>
    <label>Person to whom Records Pertain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>