force-app/main/default/objects/Court__c/fields/Petition__c.field-meta.xml
<CustomField>
    <fullName>Petition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Petition</label>
    <referenceTo>Court__c</referenceTo>
    <relationshipLabel>Petitions</relationshipLabel>
    <relationshipName>Petitions</relationshipName>
    <type>Lookup</type>
</CustomField>