force-app/main/default/objects/Court__c/fields/Petition_for_Child__c.field-meta.xml
<CustomField>
    <fullName>Petition_for_Child__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Petition for Child</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Petitions (Petition for Child)</relationshipLabel>
    <relationshipName>Petitions</relationshipName>
    <type>Lookup</type>
</CustomField>