force-app/main/default/objects/Court__c/fields/Plaement_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Plaement_Relationship__c</fullName>
    <label>Relationship</label>
    <length>255</length>
    <type>Text</type>
</CustomField>