force-app/main/default/objects/Court__c/fields/Police_Complaint_No_if_not_foster_home__c.field-meta.xml
<CustomField>
    <fullName>Police_Complaint_No_if_not_foster_home__c</fullName>
    <label>Police Complaint No(if not foster home):</label>
    <length>255</length>
    <type>Text</type>
</CustomField>