force-app/main/default/objects/Court__c/fields/Reason_for_not_notifying__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_notifying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reason for not notifying:</label>
    <type>Checkbox</type>
</CustomField>