force-app/main/default/objects/Court__c/fields/Reasonable_Efforts_Could_Not_Be_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Efforts_Could_Not_Be_Comments__c</fullName>
    <label>Reasonable_Efforts_Could_Not_Be_Comments</label>
    <type>TextArea</type>
</CustomField>