force-app/main/default/objects/Court__c/fields/Reasonable_Efforts_Could_Not_Be_Made__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_Efforts_Could_Not_Be_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reasonable_Efforts_Could_Not _Be_Made</label>
    <type>Checkbox</type>
</CustomField>