force-app/main/default/objects/Court__c/fields/Reasonable_efforts_were_made_to_Comments__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_efforts_were_made_to_Comments__c</fullName>
    <label>Reasonable_efforts_were_made_to_Comments</label>
    <type>TextArea</type>
</CustomField>