force-app/main/default/objects/Court__c/fields/Reasonable_efforts_were_made_to_finalize__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_efforts_were_made_to_finalize__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reasonable efforts were made to finalize the child&apos;s permanency plan</inlineHelpText>
    <label>Reasonable efforts were made to finalize</label>
    <type>Checkbox</type>
</CustomField>