force-app/main/default/objects/Court__c/fields/Reasonable_efforts_were_not_made__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_efforts_were_not_made__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Reasonable efforts were not made to finalize the child&apos;s permanency plan</inlineHelpText>
    <label>Reasonable efforts were not made</label>
    <type>Checkbox</type>
</CustomField>