force-app/main/default/objects/Court__c/fields/Reasonable_efforts_were_not_made_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reasonable_efforts_were_not_made_Comment__c</fullName>
    <label>Reasonable_efforts_were_not_made_Comment</label>
    <type>TextArea</type>
</CustomField>