force-app/main/default/objects/Court__c/fields/Resonable_Date__c.field-meta.xml
<CustomField>
    <fullName>Resonable_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>