force-app/main/default/objects/Court__c/fields/Resonable_Efforts_Could_Not_Be_Made__c.field-meta.xml
<CustomField>
    <fullName>Resonable_Efforts_Could_Not_Be_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resonable_Effo</label>
    <type>Checkbox</type>
</CustomField>